third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/storable/return_func_ok.exp

Diagnostics:
error: function resulting from lambda lifting is missing the `store` ability
   ┌─ tests/checking-lang-v2.2/lambda/storable/return_func_ok.move:41:13
   │
41 │             |x| f(x)
   │             ^^^^^^^^
   │
   = lambda cannot be reduced to partial application of existing function
   = expected function type: `|u64|u64 has store`

error: function resulting from lambda lifting is missing the `store` ability
   ┌─ tests/checking-lang-v2.2/lambda/storable/return_func_ok.move:44:13
   │
44 │             |x| f(x)
   │             ^^^^^^^^
   │
   = lambda cannot be reduced to partial application of existing function
   = expected function type: `|u64|u64 has store`

error: captured value is missing abilities `store`
   ┌─ tests/checking-lang-v2.2/lambda/storable/return_func_ok.move:52:17
   │
52 │             |x| f(x)
   │                 ^
   │
   = expected function type: `|u64|u64 has store`

error: function resulting from lambda lifting is missing the `store` ability
   ┌─ tests/checking-lang-v2.2/lambda/storable/return_func_ok.move:52:13
   │
52 │             |x| f(x)
   │             ^^^^^^^^
   │
   = lambda cannot be reduced to partial application of existing function
   = expected function type: `|u64|u64 has store`

error: function resulting from lambda lifting is missing the `store` ability
   ┌─ tests/checking-lang-v2.2/lambda/storable/return_func_ok.move:55:13
   │
55 │             |x| f(x)
   │             ^^^^^^^^
   │
   = lambda cannot be reduced to partial application of existing function
   = expected function type: `|u64|u64 has store`
